image overlaping navbar fixed

--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,7 @@ body{
     flex-wrap: wrap;
     position: sticky;
     top: 0px;
+    z-index: 1000;
 }
 
 .header {
